<resources>
    <string name="app_name">Productivity</string>
    <string name="todo">Notes</string>
    <string name="training">Training</string>
    <string name="calendar">Calendar</string>
    <string name="timer">Timer</string>
    <string name="podcast_button">P</string>
    <string name="flashlight_button">F</string>

    <!--notes-->
    <string name="edit_notes">Edit</string>

    <!--week plan-->
    <string name="appointment_name">Appointment Name</string>
    <string name="date">Set Date</string>
    <string name="time">Set Time</string>
    <string name="done">Done</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="content_description_week_plan">Image of weekly schedule</string>
    <string name="create_appointment">Create a new Appointment</string>

    <!--training-->
    <string name="start_training">Start a Training</string>
    <string name="choose_type">Choose a training type</string>
    <string name="gym">Gym</string>
    <string name="cardio">Cardio</string>
    <string name="climbing">Climbing</string>
    <string name="other">Other...</string>
    <string name="training_title">Training Title</string>
    <string name="start">Start</string>
    <string name="record_past">Record past training</string>
    <string name="content_description_exercise_icon">Exercise Icon</string>
    <string name="content_description_training_cardio_icon">Cardio Icon</string>
    <string name="content_description_training_gym_icon">Gym Icon</string>
    <string name="save">Save</string>
    <string name="edit_training">Edit Training</string>

    <!--timer-->
    <string name="pomodoro_timer">Pomodoro Timer</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="plus">+</string>
    <string name="stop_watch">Stop Watch</string>
    <string name="time_zero">00:00</string>
    <string name="zero">0</string>
</resources>
