<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_todo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/todo"
        android:textSize="@dimen/text_main_screen"
        android:background="@color/darkYellow"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/button_training"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_training"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/training"
        android:textSize="@dimen/text_main_screen"
        android:background="@color/darkRed"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/button_plan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_todo" />

    <Button
        android:id="@+id/button_plan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/week_plan"
        android:textSize="@dimen/text_main_screen"
        android:background="@color/darkGreen"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/button_pomodoro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_training" />

    <Button
        android:id="@+id/button_pomodoro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/timer"
        android:textSize="@dimen/text_main_screen"
        android:background="@color/darkBlue"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@id/shortcuts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_plan" />

    <LinearLayout
        android:id="@+id/shortcuts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_pomodoro">

        <Button
            android:id="@+id/action_button1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:padding="0dp"
            android:text="P"
            android:textSize="@dimen/text_title"
            android:background="#966B2D"
            android:layout_marginRight="@dimen/big_margin"/>

        <Button
            android:id="@+id/action_button2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="[ ]"
            android:textSize="@dimen/text_title"
            android:background="#966B2D"
            android:layout_marginRight="@dimen/big_margin"/>

        <Button
            android:id="@+id/action_button3"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="[ ]"
            android:textSize="@dimen/text_title"
            android:background="#966B2D"
            android:layout_marginRight="@dimen/big_margin"/>

        <Button
            android:id="@+id/action_button4"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="[ ]"
            android:textSize="@dimen/text_title"
            android:background="#966B2D"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>